--- a/abw-site-web/src/main/webapp/WEB-INF/views/phonelist.html
+++ b/abw-site-web/src/main/webapp/WEB-INF/views/phonelist.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="phoneApp">
+<html ng-app="phone_app">
     <head>
         <script src="/js/angular.js"></script>
-        <script src="/js/controllers.js"></script>
+        <script src="/js/module/phone_app.js"></script>
     </head>
     <body ng-controller="PhoneListController">
         <ul>
