--- a/abw-site-web/src/main/webapp/WEB-INF/views/register.html
+++ b/abw-site-web/src/main/webapp/WEB-INF/views/register.html
@@ -3,7 +3,7 @@
 <head>
     <title>User Register</title>
     <script src="http://cdn.bootcss.com/angular.js/1.3.0/angular.min.js" />
-    <script src="/js/module/register_app.js" />
+    <script src="/js/modules/register_app.js" />
 </head>
 <body>
     <form name="registerForm" ng-show="formshow" ng-controller="registerController">
