--- a/abw-site-web/src/main/webapp/WEB-INF/views/cart.html
+++ b/abw-site-web/src/main/webapp/WEB-INF/views/cart.html
@@ -4,7 +4,7 @@
     	<title>Your Shopping Cart－ico</title>
         <link href="/favicon.ico" rel="SHORTCUT ICON">
         <script src="http://cdn.bootcss.com/angular.js/1.3.0/angular.min.js"></script>
-        <script src="/js/module/cart_app.js"></script>
+        <script src="/js/modules/cart_app.js"></script>
     </head>
     <body ng-controller="CartController">
     	<h1>Your Orders:</h1>
