--- a/abw-site-web/src/main/webapp/WEB-INF/views/phonelist.html
+++ b/abw-site-web/src/main/webapp/WEB-INF/views/phonelist.html
@@ -2,7 +2,7 @@
 <html ng-app="phone_app">
     <head>
         <script src="/js/angular.js"></script>
-        <script src="/js/module/phone_app.js"></script>
+        <script src="/js/modules/phone_app.js"></script>
     </head>
     <body ng-controller="PhoneListController">
         <ul>
@@ -12,4 +12,23 @@
             </li>
         </ul>
     </body>
+    <hr>
+
+    <div>Search: <input ng-model="query"></div>
+    <div>
+        Sort by:
+        <select ng-model="orderProp">
+            <option value="name">Name</option>
+            <option value="age">Age</option>
+        </select>
+    </div>
+    <div>
+        <ul>
+            <li ng-repeat="phone in phones | filter:query | orderBy:orderProp">
+                {{phone.name}}
+                <p>{{phone.snippet}}</p>
+            </li>
+        </ul>
+    </div>
+
 </html>
